--- a/core-services/ci-secret-bootstrap/_config.yaml
+++ b/core-services/ci-secret-bootstrap/_config.yaml
@@ -13,6 +13,7 @@ cluster_groups:
   - build08
   - multi01
   - vsphere
+  - vsphere-build02
   non_app_ci:
   - arm01
   - build01
@@ -23,6 +24,7 @@ cluster_groups:
   - build08
   - multi01
   - vsphere
+  - vsphere-build02
   non_app_ci_arm:
   - arm01
   non_osd_x86:
@@ -35,6 +37,7 @@ cluster_groups:
   - build05
   - build08
   - multi01
+  - vsphere-build02
 secret_configs:
 - from:
     ops-mirror.pem:
@@ -2140,6 +2143,12 @@ secret_configs:
     sa.pod-scaler.multi01.token.txt:
       field: sa.pod-scaler.multi01.token.txt
       item: pod-scaler
+    sa.pod-scaler.vsphere-build02.token.txt:
+      field: sa.pod-scaler.vsphere-build02.token.txt
+      item: pod-scaler
+    vsphere-build02.config:
+      field: sa.pod-scaler.vsphere-build02.config
+      item: pod-scaler
   to:
   - cluster: app.ci
     name: pod-scaler
@@ -2472,6 +2481,12 @@ secret_configs:
     sa.crier.multi01.token.txt:
       field: sa.crier.multi01.token.txt
       item: build_farm
+    sa.crier.vsphere-build02.config:
+      field: sa.crier.vsphere-build02.config
+      item: build_farm
+    sa.crier.vsphere-build02.token.txt:
+      field: sa.crier.vsphere-build02.token.txt
+      item: build_farm
     sa.crier.vsphere.config:
       field: sa.crier.vsphere.config
       item: build_farm
@@ -2512,6 +2527,9 @@ secret_configs:
       item: config-updater
     sa.config-updater.multi01.config:
       field: sa.config-updater.multi01.config
+      item: config-updater
+    sa.config-updater.vsphere-build02.config:
+      field: sa.config-updater.vsphere-build02.config
       item: config-updater
     sa.config-updater.vsphere.config:
       field: sa.config-updater.vsphere.config
@@ -2581,6 +2599,12 @@ secret_configs:
     sa.deck.multi01.token.txt:
       field: sa.deck.multi01.token.txt
       item: build_farm
+    sa.deck.vsphere-build02.config:
+      field: sa.deck.vsphere-build02.config
+      item: build_farm
+    sa.deck.vsphere-build02.token.txt:
+      field: sa.deck.vsphere-build02.token.txt
+      item: build_farm
     sa.deck.vsphere.config:
       field: sa.deck.vsphere.config
       item: build_farm
@@ -2646,6 +2670,12 @@ secret_configs:
     sa.hook.multi01.token.txt:
       field: sa.hook.multi01.token.txt
       item: build_farm
+    sa.hook.vsphere-build02.config:
+      field: sa.hook.vsphere-build02.config
+      item: build_farm
+    sa.hook.vsphere-build02.token.txt:
+      field: sa.hook.vsphere-build02.token.txt
+      item: build_farm
     sa.hook.vsphere.config:
       field: sa.hook.vsphere.config
       item: build_farm
@@ -2710,6 +2740,12 @@ secret_configs:
       item: build_farm
     sa.prow-controller-manager.multi01.token.txt:
       field: sa.prow-controller-manager.multi01.token.txt
+      item: build_farm
+    sa.prow-controller-manager.vsphere-build02.config:
+      field: sa.prow-controller-manager.vsphere-build02.config
+      item: build_farm
+    sa.prow-controller-manager.vsphere-build02.token.txt:
+      field: sa.prow-controller-manager.vsphere-build02.token.txt
       item: build_farm
     sa.prow-controller-manager.vsphere.config:
       field: sa.prow-controller-manager.vsphere.config
@@ -2793,6 +2829,12 @@ secret_configs:
     sa.sinker.multi01.token.txt:
       field: sa.sinker.multi01.token.txt
       item: build_farm
+    sa.sinker.vsphere-build02.config:
+      field: sa.sinker.vsphere-build02.config
+      item: build_farm
+    sa.sinker.vsphere-build02.token.txt:
+      field: sa.sinker.vsphere-build02.token.txt
+      item: build_farm
     sa.sinker.vsphere.config:
       field: sa.sinker.vsphere.config
       item: build_farm
@@ -2852,6 +2894,12 @@ secret_configs:
     sa.dptp-controller-manager.multi01.token.txt:
       field: sa.dptp-controller-manager.multi01.token.txt
       item: build_farm
+    sa.dptp-controller-manager.vsphere-build02.config:
+      field: sa.dptp-controller-manager.vsphere-build02.config
+      item: build_farm
+    sa.dptp-controller-manager.vsphere-build02.token.txt:
+      field: sa.dptp-controller-manager.vsphere-build02.token.txt
+      item: build_farm
     sa.dptp-controller-manager.vsphere.config:
       field: sa.dptp-controller-manager.vsphere.config
       item: build_farm
@@ -2904,6 +2952,12 @@ secret_configs:
       item: build_farm
     sa.promoted-image-governor.multi01.token.txt:
       field: sa.promoted-image-governor.multi01.token.txt
+      item: build_farm
+    sa.promoted-image-governor.vsphere-build02.config:
+      field: sa.promoted-image-governor.vsphere-build02.config
+      item: build_farm
+    sa.promoted-image-governor.vsphere-build02.token.txt:
+      field: sa.promoted-image-governor.vsphere-build02.token.txt
       item: build_farm
     sa.promoted-image-governor.vsphere.config:
       field: sa.promoted-image-governor.vsphere.config
@@ -2976,6 +3030,12 @@ secret_configs:
     sa.ci-operator.multi01.token.txt:
       field: sa.ci-operator.multi01.token.txt
       item: build_farm
+    sa.ci-operator.vsphere-build02.config:
+      field: sa.ci-operator.vsphere-build02.config
+      item: build_farm
+    sa.ci-operator.vsphere-build02.token.txt:
+      field: sa.ci-operator.vsphere-build02.token.txt
+      item: build_farm
     sa.ci-operator.vsphere.config:
       field: sa.ci-operator.vsphere.config
       item: build_farm
@@ -3041,6 +3101,12 @@ secret_configs:
       item: ci-chat-bot
     sa.ci-chat-bot.multi01.token.txt:
       field: sa.ci-chat-bot.multi01.token.txt
+      item: ci-chat-bot
+    sa.ci-chat-bot.vsphere-build02.config:
+      field: sa.ci-chat-bot.vsphere-build02.config
+      item: ci-chat-bot
+    sa.ci-chat-bot.vsphere-build02.token.txt:
+      field: sa.ci-chat-bot.vsphere-build02.token.txt
       item: ci-chat-bot
     sa.ci-chat-bot.vsphere.config:
       field: sa.ci-chat-bot.vsphere.config
@@ -3112,6 +3178,12 @@ secret_configs:
       item: build_farm
     sa.github-ldap-user-group-creator.multi01.token.txt:
       field: sa.github-ldap-user-group-creator.multi01.token.txt
+      item: build_farm
+    sa.github-ldap-user-group-creator.vsphere-build02.config:
+      field: sa.github-ldap-user-group-creator.vsphere-build02.config
+      item: build_farm
+    sa.github-ldap-user-group-creator.vsphere-build02.token.txt:
+      field: sa.github-ldap-user-group-creator.vsphere-build02.token.txt
       item: build_farm
     sa.github-ldap-user-group-creator.vsphere.config:
       field: sa.github-ldap-user-group-creator.vsphere.config
@@ -4132,6 +4204,12 @@ secret_configs:
     sa.cluster-display.multi01.token.txt:
       field: sa.cluster-display.multi01.token.txt
       item: build_farm
+    sa.cluster-display.vsphere-build02.config:
+      field: sa.cluster-display.vsphere-build02.config
+      item: build_farm
+    sa.cluster-display.vsphere-build02.token.txt:
+      field: sa.cluster-display.vsphere-build02.token.txt
+      item: build_farm
     sa.cluster-display.vsphere.config:
       field: sa.cluster-display.vsphere.config
       item: build_farm
@@ -5016,6 +5094,72 @@ secret_configs:
     name: multi-arch-builder-controller-multi01-registry-credentials
     namespace: ci
     type: kubernetes.io/dockerconfigjson
+- from:
+    .dockerconfigjson:
+      dockerconfigJSON:
+      - auth_field: token_image-puller_vsphere-build02_reg_auth_value.txt
+        item: build_farm
+        registry_url: image-registry.openshift-image-registry.svc.cluster.local:5000
+      - auth_field: token_image-puller_vsphere-build02_reg_auth_value.txt
+        item: build_farm
+        registry_url: image-registry.openshift-image-registry.svc:5000
+      - auth_field: token_image-puller_vsphere-build02_reg_auth_value.txt
+        item: build_farm
+        registry_url: registry.apps.build02.vmc.ci.openshift.org
+      - auth_field: token_image-pusher_app.ci_reg_auth_value.txt
+        item: build_farm
+        registry_url: registry.ci.openshift.org
+      - auth_field: auth
+        item: quay-io-push-credentials
+        registry_url: quay.io/openshift/ci
+  to:
+  - cluster: vsphere-build02
+    name: registry-push-credentials-ci-central
+    namespace: ci
+    type: kubernetes.io/dockerconfigjson
+  - cluster: vsphere-build02
+    name: registry-push-credentials-ci-central
+    namespace: test-credentials
+    type: kubernetes.io/dockerconfigjson
+- from:
+    .dockerconfigjson:
+      dockerconfigJSON:
+      - auth_field: token_image-puller_vsphere-build02_reg_auth_value.txt
+        item: build_farm
+        registry_url: image-registry.openshift-image-registry.svc.cluster.local:5000
+      - auth_field: token_image-puller_vsphere-build02_reg_auth_value.txt
+        item: build_farm
+        registry_url: image-registry.openshift-image-registry.svc:5000
+      - auth_field: token_image-puller_vsphere-build02_reg_auth_value.txt
+        item: build_farm
+        registry_url: registry.apps.build02.vmc.ci.openshift.org
+      - auth_field: token_image-puller_app.ci_reg_auth_value.txt
+        item: build_farm
+        registry_url: registry.ci.openshift.org
+      - auth_field: auth
+        email_field: email
+        item: quay.io-pull-secret
+        registry_url: quay.io
+  to:
+  - cluster: vsphere-build02
+    name: registry-pull-credentials
+    namespace: ci
+    type: kubernetes.io/dockerconfigjson
+  - cluster: vsphere-build02
+    name: registry-pull-credentials
+    namespace: test-credentials
+    type: kubernetes.io/dockerconfigjson
+- from:
+    kubeconfig:
+      field: sa.ci-operator.vsphere-build02.config
+      item: build_farm
+    sa.ci-operator.vsphere-build02.token.txt:
+      field: sa.ci-operator.vsphere-build02.token.txt
+      item: build_farm
+  to:
+  - cluster: vsphere-build02
+    name: ci-operator
+    namespace: test-credentials
 user_secrets_target_clusters:
 - app.ci
 - arm01
@@ -5028,4 +5172,5 @@ user_secrets_target_clusters:
 - hive
 - multi01
 - vsphere
+- vsphere-build02
 vault_dptp_prefix: dptp
