--- a/ci-operator/config/openshift/release/openshift-release-master__nightly-4.14.yaml
+++ b/ci-operator/config/openshift/release/openshift-release-master__nightly-4.14.yaml
@@ -316,6 +316,12 @@ tests:
       enable:
       - observers-resource-watch
     workflow: openshift-e2e-vsphere
+- as: e2e-vsphere-static-ovn
+  optional: true
+  steps:
+    cluster_profile: vsphere-8-vpn
+    workflow: openshift-e2e-vsphere-staticip
+  timeout: 6h0m0s
 - as: e2e-aws-ovn-local-gateway
   interval: 168h
   steps:
@@ -330,7 +336,7 @@ tests:
 - as: e2e-vsphere-ovn
   interval: 164h
   steps:
-    cluster_profile: vsphere-8
+    cluster_profile: vsphere-8-vpn
     env:
       TEST_SKIPS: provisioning should mount multiple PV pointing to the same storage
         on the same node
