--- a/ci-operator/jobs/openshift/release/openshift-release-master-periodics.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-master-periodics.yaml
@@ -63784,7 +63784,7 @@ periodics:
   interval: 164h
   labels:
     ci-operator.openshift.io/cloud: vsphere
-    ci-operator.openshift.io/cloud-cluster-profile: vsphere-8
+    ci-operator.openshift.io/cloud-cluster-profile: vsphere-8-vpn
     ci-operator.openshift.io/variant: nightly-4.14
     ci.openshift.io/generator: prowgen
     ci.openshift.io/no-builds: "true"
@@ -63841,7 +63841,7 @@ periodics:
         secretName: ci-pull-credentials
     - name: cluster-profile
       secret:
-        secretName: cluster-secrets-vsphere
+        secretName: cluster-secrets-vsphere-8-vpn
     - name: pull-secret
       secret:
         secretName: registry-pull-credentials
