--- a/ci-operator/config/openshift-power-monitoring/kepler-operator/openshift-power-monitoring-kepler-operator-v1alpha1.yaml
+++ b/ci-operator/config/openshift-power-monitoring/kepler-operator/openshift-power-monitoring-kepler-operator-v1alpha1.yaml
@@ -54,6 +54,7 @@ tests:
     - as: install
       cli: latest
       commands: |
+        echo test
         oc create namespace kepler-operator
         operator-sdk run bundle -n kepler-operator "$OO_BUNDLE" --install-mode AllNamespaces --skip-tls
         oc wait --for condition=Available -n kepler-operator deployment kepler-operator-controller-manager
