--- a/ci-operator/config/openshift/hypershift/openshift-hypershift-release-4.14__periodics.yaml
+++ b/ci-operator/config/openshift/hypershift/openshift-hypershift-release-4.14__periodics.yaml
@@ -151,17 +151,28 @@ tests:
       MCE_VERSION: "2.3"
       ODF_OPERATOR_SUB_CHANNEL: stable-4.13
     workflow: hypershift-mce-kubevirt-baremetalds-conformance
-- as: e2e-mce-power-conformance
+- as: e2e-mce-ibmz-conformance
   cron: 0 4 * * *
   steps:
     cluster_profile: aws
     env:
-      ISO_URL: https://mirror.openshift.com/pub/openshift-v4/ppc64le/dependencies/rhcos/4.13/4.13.0/rhcos-4.13.0-ppc64le-live.ppc64le.iso
+      ISO_URL: https://mirror.openshift.com/pub/openshift-v4/s390x/dependencies/rhcos/pre-release/latest-4.14/rhcos-4.14.0-ec.2-s390x-live.s390x.iso
       MCE_VERSION: "2.4"
-      OPENSHIFT_VERSION: 4.13.0
-      RHCOS_VERSION: 413.92.202305041429-0
-      ROOT_FS_URL: https://mirror.openshift.com/pub/openshift-v4/ppc64le/dependencies/rhcos/4.13/4.13.0/rhcos-4.13.0-ppc64le-live-rootfs.ppc64le.img
-    workflow: hypershift-mce-power-conformance
+      OCP_VERSION: 4.14.0-ec.2
+      ROOT_FS_URL: https://mirror.openshift.com/pub/openshift-v4/s390x/dependencies/rhcos/pre-release/latest-4.14/rhcos-4.14.0-ec.2-s390x-live-rootfs.s390x.img
+      OCP_RELEASE_FILE_URL: 'https://mirror.openshift.com/pub/openshift-v4/s390x/clients/ocp-dev-preview/4.14.0-ec.2/release.txt'
+    workflow: hypershift-mce-ibmz-conformance
+- as: e2e-mce-ibmz-conformance
+  cron: 0 4 * * *
+  steps:
+    cluster_profile: aws
+    env:
+      ISO_URL: https://mirror.openshift.com/pub/openshift-v4/s390x/dependencies/rhcos/pre-release/latest-4.14/rhcos-4.14.0-ec.2-s390x-live.s390x.iso
+      MCE_VERSION: "2.4"
+      OCP_VERSION: 4.14.0-ec.2
+      ROOT_FS_URL: https://mirror.openshift.com/pub/openshift-v4/s390x/dependencies/rhcos/pre-release/latest-4.14/rhcos-4.14.0-ec.2-s390x-live-rootfs.s390x.img
+      OCP_RELEASE_FILE_URL: 'https://mirror.openshift.com/pub/openshift-v4/s390x/clients/ocp-dev-preview/4.14.0-ec.2/release.txt'
+    workflow: hypershift-mce-ibmz-conformance
 zz_generated_metadata:
   branch: release-4.14
   org: openshift
