--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -17,6 +17,11 @@ resources:
       memory: 200Mi
 tests:
 - as: integration
+  steps:
+    env:
+      MYSQL_USERNAME: test
+      MYSQL_PASSWORD: zaphod
+      MYSQL_DATABASE: test 
   commands: ./integration/integration_test.sh
   container:
     from: src
