--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -1,8 +1,8 @@
 build_root:
   image_stream_tag:
-    name: release
-    namespace: openshift
-    tag: golang-1.13
+    name: builder
+    namespace: ocp
+    tag: rhel-9-golang-1.20-openshift-4.14
   base_images:
     trilliandb:
       namespace: securesign
