--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -22,7 +22,12 @@ tests:
       MYSQL_USERNAME: test
       MYSQL_PASSWORD: zaphod
       MYSQL_DATABASE: test 
-    commands: ./integration/integration_test.sh
+    test:
+      commands: ./integration/integration_test.sh
+      env:
+      - name: MYSQL_USERNAME
+      - name: MYSQL_PASSWORD
+      - name: MYSQL_DATABASE
     container:
       from: src
 zz_generated_metadata:
