hypershift: mce-agent

--- a/ci-operator/config/openshift/hypershift/openshift-hypershift-release-4.14__periodics.yaml
+++ b/ci-operator/config/openshift/hypershift/openshift-hypershift-release-4.14__periodics.yaml
@@ -133,6 +133,7 @@ tests:
     cluster_profile: equinix-ocp-metal
     env:
       MCE_VERSION: "2.4"
+      LVM_OPERATOR_SUB_CHANNEL: stable-4.14
     workflow: hypershift-mce-agent-conformance
 - as: e2e-kubevirt-conformance
   cron: 0 4 * * *
