Injecting OLM CI images into the e2e
Signed-off-by: Frederic Giloux <fgiloux@redhat.com>

--- a/ci-operator/config/stolostron/olm-addon/stolostron-olm-addon-main.yaml
+++ b/ci-operator/config/stolostron/olm-addon/stolostron-olm-addon-main.yaml
@@ -30,6 +30,12 @@ images:
 promotion:
   name: "2.9"
   namespace: stolostron
+releases:
+  latest:
+    integration:
+      include_built_images: true
+      name: "4.14"
+      namespace: ocp
 resources:
   '*':
     limits:
@@ -60,6 +66,11 @@ tests:
     - as: e2e
       commands: |
         ./cicd/prow-e2e-kind.sh
+      dependencies:
+      - env: OLM_IMAGE
+        name: operator-lifecycle-manager
+      - env: CMS_IMAGE
+        name: operator-registry
       from: src
       resources:
         requests:
