--- a/ci-operator/step-registry/redhat-chaos/hog-scenarios/redhat-chaos-hog-scenarios-chain.yaml
+++ b/ci-operator/step-registry/redhat-chaos/hog-scenarios/redhat-chaos-hog-scenarios-chain.yaml
@@ -6,8 +6,11 @@ chain:
   - ref: redhat-chaos-hog-scenarios-memory
   - ref: redhat-chaos-hog-scenarios-cpu
   env:
-      GC: "False"
-      ITERATION_MULTIPLIER_ENV: "4"
-      CHURN: "False"
+  - name: GC
+    default: "False"
+  - name: ITERATION_MULTIPLIER_ENV
+    default: "4"
+  - name: CHURN
+    default: "False"
   documentation: |-
     This workflow executes chaos scenarios to ensure OpenShift is resilient and performant.
