using c5 master nodes

--- a/ci-operator/config/openshift-qe/ocp-qe-perfscale-ci/openshift-qe-ocp-qe-perfscale-ci-main__aws-4.14.yaml
+++ b/ci-operator/config/openshift-qe/ocp-qe-perfscale-ci/openshift-qe-ocp-qe-perfscale-ci-main__aws-4.14.yaml
@@ -45,7 +45,7 @@ tests:
       BASE_DOMAIN: qe.devcluster.openshift.com
       COMPUTE_NODE_REPLICAS: "24"
       COMPUTE_NODE_TYPE: m6a.xlarge
-      CONTROL_PLANE_INSTANCE_TYPE: m6a.4xlarge
+      CONTROL_PLANE_INSTANCE_TYPE: c5.4xlarge
     post:
     - chain: ipi-aws-post
     pre:
@@ -73,7 +73,7 @@ tests:
       BASE_DOMAIN: qe.devcluster.openshift.com
       COMPUTE_NODE_REPLICAS: "24"
       COMPUTE_NODE_TYPE: m6a.2xlarge
-      CONTROL_PLANE_INSTANCE_TYPE: m6a.4xlarge
+      CONTROL_PLANE_INSTANCE_TYPE: c5.4xlarge
       PODS_PER_NODE: "200"
     post:
     - chain: ipi-aws-post
