--- a/ci-operator/jobs/openshift/release/openshift-release-master-postsubmits.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-master-postsubmits.yaml
@@ -540,15 +540,15 @@ postsubmits:
     cluster: app.ci
     decorate: true
     labels:
-      ci.openshift.io/build-farm: vsphere-build02
+      ci.openshift.io/build-farm: vsphere02
       ci.openshift.io/generator: cluster-init
       ci.openshift.io/role: infra
     max_concurrency: 1
-    name: branch-ci-openshift-release-master-vsphere-build02-apply
+    name: branch-ci-openshift-release-master-vsphere02-apply
     spec:
       containers:
       - args:
-        - --config-dir=clusters/build-clusters/vsphere-build02
+        - --config-dir=clusters/build-clusters/vsphere02
         - --as=
         - --kubeconfig=/etc/build-farm-credentials/kubeconfig
         - --confirm=true
@@ -569,6 +569,6 @@ postsubmits:
       - name: build-farm-credentials
         secret:
           items:
-          - key: sa.config-updater.vsphere-build02.config
+          - key: sa.config-updater.vsphere02.config
             path: kubeconfig
           secretName: config-updater
