--- a/ci-operator/jobs/openshift/release/openshift-release-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-master-presubmits.yaml
@@ -1371,19 +1371,19 @@ presubmits:
     - ^master$
     - ^master-
     cluster: app.ci
-    context: ci/build-farm/vsphere-build02-dry
+    context: ci/build-farm/vsphere02-dry
     decorate: true
     labels:
-      ci.openshift.io/build-farm: vsphere-build02
+      ci.openshift.io/build-farm: vsphere02
       ci.openshift.io/generator: cluster-init
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
-    name: pull-ci-openshift-release-master-vsphere-build02-dry
-    rerun_command: /test vsphere-build02-dry
+    name: pull-ci-openshift-release-master-vsphere02-dry
+    rerun_command: /test vsphere02-dry
     run_if_changed: ^clusters/.*
     spec:
       containers:
       - args:
-        - --config-dir=clusters/build-clusters/vsphere-build02
+        - --config-dir=clusters/build-clusters/vsphere02
         - --as=
         - --kubeconfig=/etc/build-farm-credentials/kubeconfig
         command:
@@ -1408,12 +1408,12 @@ presubmits:
       - name: build-farm-credentials
         secret:
           items:
-          - key: sa.config-updater.vsphere-build02.config
+          - key: sa.config-updater.vsphere02.config
             path: kubeconfig
           secretName: config-updater
       - emptyDir: {}
         name: tmp
-    trigger: (?m)^/test( | .* )vsphere-build02-dry,?($|\s.*)
+    trigger: (?m)^/test( | .* )vsphere02-dry,?($|\s.*)
   - agent: kubernetes
     always_run: false
     branches:
