--- a/core-services/ci-secret-bootstrap/_config.yaml
+++ b/core-services/ci-secret-bootstrap/_config.yaml
@@ -13,7 +13,7 @@ cluster_groups:
   - build08
   - multi01
   - vsphere
-  - vsphere-build02
+  - vsphere02
   non_app_ci:
   - arm01
   - build01
@@ -24,7 +24,7 @@ cluster_groups:
   - build08
   - multi01
   - vsphere
-  - vsphere-build02
+  - vsphere02
   non_app_ci_arm:
   - arm01
   non_osd_x86:
@@ -2474,11 +2474,11 @@ secret_configs:
     sa.crier.multi01.token.txt:
       field: sa.crier.multi01.token.txt
       item: build_farm
-    sa.crier.vsphere-build02.config:
-      field: sa.crier.vsphere-build02.config
+    sa.crier.vsphere02.config:
+      field: sa.crier.vsphere02.config
       item: build_farm
-    sa.crier.vsphere-build02.token.txt:
-      field: sa.crier.vsphere-build02.token.txt
+    sa.crier.vsphere02.token.txt:
+      field: sa.crier.vsphere02.token.txt
       item: build_farm
     sa.crier.vsphere.config:
       field: sa.crier.vsphere.config
@@ -2521,8 +2521,8 @@ secret_configs:
     sa.config-updater.multi01.config:
       field: sa.config-updater.multi01.config
       item: config-updater
-    sa.config-updater.vsphere-build02.config:
-      field: sa.config-updater.vsphere-build02.config
+    sa.config-updater.vsphere02.config:
+      field: sa.config-updater.vsphere02.config
       item: config-updater
     sa.config-updater.vsphere.config:
       field: sa.config-updater.vsphere.config
@@ -2592,11 +2592,11 @@ secret_configs:
     sa.deck.multi01.token.txt:
       field: sa.deck.multi01.token.txt
       item: build_farm
-    sa.deck.vsphere-build02.config:
-      field: sa.deck.vsphere-build02.config
+    sa.deck.vsphere02.config:
+      field: sa.deck.vsphere02.config
       item: build_farm
-    sa.deck.vsphere-build02.token.txt:
-      field: sa.deck.vsphere-build02.token.txt
+    sa.deck.vsphere02.token.txt:
+      field: sa.deck.vsphere02.token.txt
       item: build_farm
     sa.deck.vsphere.config:
       field: sa.deck.vsphere.config
@@ -2663,11 +2663,11 @@ secret_configs:
     sa.hook.multi01.token.txt:
       field: sa.hook.multi01.token.txt
       item: build_farm
-    sa.hook.vsphere-build02.config:
-      field: sa.hook.vsphere-build02.config
+    sa.hook.vsphere02.config:
+      field: sa.hook.vsphere02.config
       item: build_farm
-    sa.hook.vsphere-build02.token.txt:
-      field: sa.hook.vsphere-build02.token.txt
+    sa.hook.vsphere02.token.txt:
+      field: sa.hook.vsphere02.token.txt
       item: build_farm
     sa.hook.vsphere.config:
       field: sa.hook.vsphere.config
@@ -2734,11 +2734,11 @@ secret_configs:
     sa.prow-controller-manager.multi01.token.txt:
       field: sa.prow-controller-manager.multi01.token.txt
       item: build_farm
-    sa.prow-controller-manager.vsphere-build02.config:
-      field: sa.prow-controller-manager.vsphere-build02.config
+    sa.prow-controller-manager.vsphere02.config:
+      field: sa.prow-controller-manager.vsphere02.config
       item: build_farm
-    sa.prow-controller-manager.vsphere-build02.token.txt:
-      field: sa.prow-controller-manager.vsphere-build02.token.txt
+    sa.prow-controller-manager.vsphere02.token.txt:
+      field: sa.prow-controller-manager.vsphere02.token.txt
       item: build_farm
     sa.prow-controller-manager.vsphere.config:
       field: sa.prow-controller-manager.vsphere.config
@@ -2822,11 +2822,11 @@ secret_configs:
     sa.sinker.multi01.token.txt:
       field: sa.sinker.multi01.token.txt
       item: build_farm
-    sa.sinker.vsphere-build02.config:
-      field: sa.sinker.vsphere-build02.config
+    sa.sinker.vsphere02.config:
+      field: sa.sinker.vsphere02.config
       item: build_farm
-    sa.sinker.vsphere-build02.token.txt:
-      field: sa.sinker.vsphere-build02.token.txt
+    sa.sinker.vsphere02.token.txt:
+      field: sa.sinker.vsphere02.token.txt
       item: build_farm
     sa.sinker.vsphere.config:
       field: sa.sinker.vsphere.config
@@ -2887,11 +2887,11 @@ secret_configs:
     sa.dptp-controller-manager.multi01.token.txt:
       field: sa.dptp-controller-manager.multi01.token.txt
       item: build_farm
-    sa.dptp-controller-manager.vsphere-build02.config:
-      field: sa.dptp-controller-manager.vsphere-build02.config
+    sa.dptp-controller-manager.vsphere02.config:
+      field: sa.dptp-controller-manager.vsphere02.config
       item: build_farm
-    sa.dptp-controller-manager.vsphere-build02.token.txt:
-      field: sa.dptp-controller-manager.vsphere-build02.token.txt
+    sa.dptp-controller-manager.vsphere02.token.txt:
+      field: sa.dptp-controller-manager.vsphere02.token.txt
       item: build_farm
     sa.dptp-controller-manager.vsphere.config:
       field: sa.dptp-controller-manager.vsphere.config
@@ -2946,11 +2946,11 @@ secret_configs:
     sa.promoted-image-governor.multi01.token.txt:
       field: sa.promoted-image-governor.multi01.token.txt
       item: build_farm
-    sa.promoted-image-governor.vsphere-build02.config:
-      field: sa.promoted-image-governor.vsphere-build02.config
+    sa.promoted-image-governor.vsphere02.config:
+      field: sa.promoted-image-governor.vsphere02.config
       item: build_farm
-    sa.promoted-image-governor.vsphere-build02.token.txt:
-      field: sa.promoted-image-governor.vsphere-build02.token.txt
+    sa.promoted-image-governor.vsphere02.token.txt:
+      field: sa.promoted-image-governor.vsphere02.token.txt
       item: build_farm
     sa.promoted-image-governor.vsphere.config:
       field: sa.promoted-image-governor.vsphere.config
@@ -3023,11 +3023,11 @@ secret_configs:
     sa.ci-operator.multi01.token.txt:
       field: sa.ci-operator.multi01.token.txt
       item: build_farm
-    sa.ci-operator.vsphere-build02.config:
-      field: sa.ci-operator.vsphere-build02.config
+    sa.ci-operator.vsphere02.config:
+      field: sa.ci-operator.vsphere02.config
       item: build_farm
-    sa.ci-operator.vsphere-build02.token.txt:
-      field: sa.ci-operator.vsphere-build02.token.txt
+    sa.ci-operator.vsphere02.token.txt:
+      field: sa.ci-operator.vsphere02.token.txt
       item: build_farm
     sa.ci-operator.vsphere.config:
       field: sa.ci-operator.vsphere.config
@@ -3095,11 +3095,11 @@ secret_configs:
     sa.ci-chat-bot.multi01.token.txt:
       field: sa.ci-chat-bot.multi01.token.txt
       item: ci-chat-bot
-    sa.ci-chat-bot.vsphere-build02.config:
-      field: sa.ci-chat-bot.vsphere-build02.config
+    sa.ci-chat-bot.vsphere02.config:
+      field: sa.ci-chat-bot.vsphere02.config
       item: ci-chat-bot
-    sa.ci-chat-bot.vsphere-build02.token.txt:
-      field: sa.ci-chat-bot.vsphere-build02.token.txt
+    sa.ci-chat-bot.vsphere02.token.txt:
+      field: sa.ci-chat-bot.vsphere02.token.txt
       item: ci-chat-bot
     sa.ci-chat-bot.vsphere.config:
       field: sa.ci-chat-bot.vsphere.config
@@ -3172,11 +3172,11 @@ secret_configs:
     sa.github-ldap-user-group-creator.multi01.token.txt:
       field: sa.github-ldap-user-group-creator.multi01.token.txt
       item: build_farm
-    sa.github-ldap-user-group-creator.vsphere-build02.config:
-      field: sa.github-ldap-user-group-creator.vsphere-build02.config
+    sa.github-ldap-user-group-creator.vsphere02.config:
+      field: sa.github-ldap-user-group-creator.vsphere02.config
       item: build_farm
-    sa.github-ldap-user-group-creator.vsphere-build02.token.txt:
-      field: sa.github-ldap-user-group-creator.vsphere-build02.token.txt
+    sa.github-ldap-user-group-creator.vsphere02.token.txt:
+      field: sa.github-ldap-user-group-creator.vsphere02.token.txt
       item: build_farm
     sa.github-ldap-user-group-creator.vsphere.config:
       field: sa.github-ldap-user-group-creator.vsphere.config
@@ -4197,11 +4197,11 @@ secret_configs:
     sa.cluster-display.multi01.token.txt:
       field: sa.cluster-display.multi01.token.txt
       item: build_farm
-    sa.cluster-display.vsphere-build02.config:
-      field: sa.cluster-display.vsphere-build02.config
+    sa.cluster-display.vsphere02.config:
+      field: sa.cluster-display.vsphere02.config
       item: build_farm
-    sa.cluster-display.vsphere-build02.token.txt:
-      field: sa.cluster-display.vsphere-build02.token.txt
+    sa.cluster-display.vsphere02.token.txt:
+      field: sa.cluster-display.vsphere02.token.txt
       item: build_farm
     sa.cluster-display.vsphere.config:
       field: sa.cluster-display.vsphere.config
@@ -5090,13 +5090,13 @@ secret_configs:
 - from:
     .dockerconfigjson:
       dockerconfigJSON:
-      - auth_field: token_image-puller_vsphere-build02_reg_auth_value.txt
+      - auth_field: token_image-puller_vsphere02_reg_auth_value.txt
         item: build_farm
         registry_url: image-registry.openshift-image-registry.svc.cluster.local:5000
-      - auth_field: token_image-puller_vsphere-build02_reg_auth_value.txt
+      - auth_field: token_image-puller_vsphere02_reg_auth_value.txt
         item: build_farm
         registry_url: image-registry.openshift-image-registry.svc:5000
-      - auth_field: token_image-puller_vsphere-build02_reg_auth_value.txt
+      - auth_field: token_image-puller_vsphere02_reg_auth_value.txt
         item: build_farm
         registry_url: registry.apps.build02.vmc.ci.openshift.org
       - auth_field: token_image-pusher_app.ci_reg_auth_value.txt
@@ -5106,24 +5106,24 @@ secret_configs:
         item: quay-io-push-credentials
         registry_url: quay.io/openshift/ci
   to:
-  - cluster: vsphere-build02
+  - cluster: vsphere02
     name: registry-push-credentials-ci-central
     namespace: ci
     type: kubernetes.io/dockerconfigjson
-  - cluster: vsphere-build02
+  - cluster: vsphere02
     name: registry-push-credentials-ci-central
     namespace: test-credentials
     type: kubernetes.io/dockerconfigjson
 - from:
     .dockerconfigjson:
       dockerconfigJSON:
-      - auth_field: token_image-puller_vsphere-build02_reg_auth_value.txt
+      - auth_field: token_image-puller_vsphere02_reg_auth_value.txt
         item: build_farm
         registry_url: image-registry.openshift-image-registry.svc.cluster.local:5000
-      - auth_field: token_image-puller_vsphere-build02_reg_auth_value.txt
+      - auth_field: token_image-puller_vsphere02_reg_auth_value.txt
         item: build_farm
         registry_url: image-registry.openshift-image-registry.svc:5000
-      - auth_field: token_image-puller_vsphere-build02_reg_auth_value.txt
+      - auth_field: token_image-puller_vsphere02_reg_auth_value.txt
         item: build_farm
         registry_url: registry.apps.build02.vmc.ci.openshift.org
       - auth_field: token_image-puller_app.ci_reg_auth_value.txt
@@ -5134,23 +5134,23 @@ secret_configs:
         item: quay.io-pull-secret
         registry_url: quay.io
   to:
-  - cluster: vsphere-build02
+  - cluster: vsphere02
     name: registry-pull-credentials
     namespace: ci
     type: kubernetes.io/dockerconfigjson
-  - cluster: vsphere-build02
+  - cluster: vsphere02
     name: registry-pull-credentials
     namespace: test-credentials
     type: kubernetes.io/dockerconfigjson
 - from:
     kubeconfig:
-      field: sa.ci-operator.vsphere-build02.config
+      field: sa.ci-operator.vsphere02.config
       item: build_farm
-    sa.ci-operator.vsphere-build02.token.txt:
-      field: sa.ci-operator.vsphere-build02.token.txt
+    sa.ci-operator.vsphere02.token.txt:
+      field: sa.ci-operator.vsphere02.token.txt
       item: build_farm
   to:
-  - cluster: vsphere-build02
+  - cluster: vsphere02
     name: ci-operator
     namespace: test-credentials
 user_secrets_target_clusters:
@@ -5165,5 +5165,5 @@ user_secrets_target_clusters:
 - hive
 - multi01
 - vsphere
-- vsphere-build02
+- vsphere02
 vault_dptp_prefix: dptp
