--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -320,7 +320,7 @@ config_updater:
       - build08
       - multi01
       - vsphere
-      - vsphere-build02
+      - vsphere02
       namespaces:
       - ci
     build_farm_ocp:
@@ -334,7 +334,7 @@ config_updater:
       - build08
       - multi01
       - vsphere
-      - vsphere-build02
+      - vsphere02
       namespaces:
       - ocp
     build_farm_ocp_aarch64:
