--- a/core-services/ci-secret-generator/_config.yaml
+++ b/core-services/ci-secret-generator/_config.yaml
@@ -17,7 +17,7 @@
     - build08
     - multi01
     - vsphere
-    - vsphere-build02
+    - vsphere02
     service_account:
     - deck
     - sinker
@@ -96,7 +96,7 @@
     - build08
     - multi01
     - vsphere
-    - vsphere-build02
+    - vsphere02
 - fields:
   - cmd: oc --kubeconfig /tmp/build-farm-credentials/sa.config-updater.$(cluster).config
       get secrets --sort-by=.metadata.creationTimestamp --namespace ci -o json | jq
@@ -129,7 +129,7 @@
     - build08
     - multi01
     - vsphere
-    - vsphere-build02
+    - vsphere02
     service_account:
     - ci-chat-bot
 - fields:
