--- a/core-services/sync-rover-groups/_config.yaml
+++ b/core-services/sync-rover-groups/_config.yaml
@@ -10,7 +10,7 @@ cluster_groups:
   - build08
   - multi01
   - vsphere
-  - vsphere-build02
+  - vsphere02
   dp-managed:
   - build01
   - build02
