Move CSI test before conformance
Signed-off-by: Alexander Wels <awels@redhat.com>

--- a/ci-operator/step-registry/hypershift/kubevirt/run-csi-e2e/hypershift-kubevirt-run-csi-e2e-chain.yaml
+++ b/ci-operator/step-registry/hypershift/kubevirt/run-csi-e2e/hypershift-kubevirt-run-csi-e2e-chain.yaml
@@ -8,6 +8,9 @@ chain:
       export HYPERSHIFT_MANAGEMENT_CLUSTER_KUBECONFIG="${KUBECONFIG}"
       export HYPERSHIFT_MANAGEMENT_CLUSTER_NAMESPACE="$(echo -n clusters-${CLUSTER_NAME}|sed 's#\.#-#g')"
       export KUBECONFIG=${SHARED_DIR}/nested_kubeconfig
+      echo "nested_kubeconfig ******"
+      cat ${SHARED_DIR}/nested_kubeconfig
+      echo "done ******"
       export TEST_PROVIDER='{"type":"kubevirt"}'
       export TEST_CSI_DRIVER_MANIFEST="kubevirt-driver.yaml"
       curl -L -o ${SHARED_DIR}/${TEST_CSI_DRIVER_MANIFEST} https://raw.githubusercontent.com/openshift/kubevirt-csi-driver/master/hack/test-driver.yaml
