update env values

--- a/ci-operator/config/CSPI-QE/MSI/CSPI-QE-MSI-cluster-install-uninstall.yaml
+++ b/ci-operator/config/CSPI-QE/MSI/CSPI-QE-MSI-cluster-install-uninstall.yaml
@@ -71,15 +71,15 @@ tests:
   steps:
     cluster_profile: aws-managed-cspi-qe
     env:
-      CLUSTER1_CONFIG: ""
+      CLUSTER1_CONFIG: name=ci1-aws-ipi;base_domain=aws.interop.ccitredhat.com;platform=aws;region=us-east-2;version=4.13;stream=ci;timeout=1h
       CLUSTER2_CONFIG: ""
       CLUSTER3_CONFIG: ""
       CLUSTER4_CONFIG: ""
-      OCM_ENVIRONMENT: ""
+      OCM_ENVIRONMENT: stage
       PARALLEL: "true"
-      PULL_SECRET_NAME: ""
-      S3_BUCKET_NAME: ""
-      S3_BUCKET_PATH: ""
+      PULL_SECRET_NAME: pull-secret
+      S3_BUCKET_NAME: openshift-cli-installer
+      S3_BUCKET_PATH: openshift-ci
     test:
     - ref: cluster-install
     - ref: cluster-uninstall
