--- a/ci-operator/jobs/CSPI-QE/MSI/CSPI-QE-MSI-cluster-install-uninstall-periodics.yaml
+++ b/ci-operator/jobs/CSPI-QE/MSI/CSPI-QE-MSI-cluster-install-uninstall-periodics.yaml
@@ -368,28 +368,67 @@ periodics:
   cluster: build03
   cron: '@yearly'
   decorate: true
-  extra_refs:
-  - base_ref: cluster-install-uninstall
-    org: CSPI-QE
-    repo: MSI
   labels:
     ci-operator.openshift.io/cloud: aws
     ci-operator.openshift.io/cloud-cluster-profile: aws-managed-cspi-qe
-    job-release: "4.13"
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
   name: periodic-ci-CSPI-QE-MSI-cluster-install-uninstall-multi-cluster-install-uninstall-trigger
   spec:
     containers:
     - args:
-      - --gcs-upload-secret=/secrets/gcs/service-account.json
-      - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
-      - --lease-server-credentials-file=/etc/boskos/credentials
-      - --report-credentials-file=/etc/report/credentials
-      - --secret-dir=/secrets/ci-pull-credentials
-      - --secret-dir=/usr/local/multi-cluster-install-uninstall-cluster-profile
-      - --target=multi-cluster-install-uninstall
+      - -c
+      - |
+        set -o nounset
+        set -o errexit
+        set -o pipefail
+        set -o verbose
+        AWS_ACCESS_KEY_ID=$(grep "aws_access_key_id="  "${CLUSTER_PROFILE_DIR}/.awscred" | cut -d '=' -f2)
+        AWS_SECRET_ACCESS_KEY=$(grep "aws_secret_access_key="  "${CLUSTER_PROFILE_DIR}/.awscred" | cut -d '=' -f2)
+        OCM_TOKEN=$(cat /var/run/secrets/ci.openshift.io/cluster-profile/ocm-token)
+        DOCKER_CONFIG_JSON_PATH="${CLUSTER_PROFILE_DIR}/config.json"
+        CLUSTER_DATA_DIR="/tmp/clusters-data"
+        export AWS_ACCESS_KEY_ID
+        export AWS_SECRET_ACCESS_KEY
+        export OCM_TOKEN
+        export DOCKER_CONFIG=${CLUSTER_PROFILE_DIR}
+        RUN_COMMAND="poetry run python openshift_cli_installer/cli.py \
+                    --action create \
+                    --clusters-install-data-directory $CLUSTER_DATA_DIR \
+                    --ocm-token=$OCM_TOKEN \
+                    --s3-bucket-name=$S3_BUCKET_NAME "
+        CLUSTERS_CMD=""
+        NUM_CLUSTERS=0
+        for cluster_value in $(env | grep -E '^CLUSTER[0-9]+_CONFIG' | sort  --version-sort); do
+            cluster_value=$(echo "$cluster_value" | sed -E  's/^CLUSTER[0-9]+_CONFIG=//')
+            if  [ "${cluster_value}" ]; then
+              CLUSTERS_CMD+=" --cluster ${cluster_value} "
+              NUM_CLUSTERS=$(( NUM_CLUSTERS + 1))
+            fi
+        done
+        RUN_COMMAND+="${CLUSTERS_CMD} "
+        if [[ -n "${OCM_ENVIRONMENT}" ]]; then
+            RUN_COMMAND+=" --ocm-env=${OCM_ENVIRONMENT} "
+        fi
+        if [ "${PARALLEL}" = "true" ] && [ $NUM_CLUSTERS -gt 1 ]; then
+            RUN_COMMAND+=" --parallel"
+        fi
+        if [[ -n "${S3_BUCKET_PATH}" ]]; then
+            RUN_COMMAND+=" --s3-bucket-path=${S3_BUCKET_PATH} "
+        fi
+        if [[ -n "${PULL_SECRET_NAME}" ]]; then
+            RUN_COMMAND+=" --registry-config-file=/var/run/secrets/ci.openshift.io/cluster-profile/${PULL_SECRET_NAME} --docker-config-file ${DOCKER_CONFIG_JSON_PATH}"
+        fi
+        echo "$RUN_COMMAND" | sed -r "s/ocm-token=[A-Za-z0-9\.\-]+/ocm-token=hashed-token /g"
+        set +e
+        ${RUN_COMMAND}
+        return_code=$?
+        # Save cluster_data.yaml and kubeconfig files to be used during cluster deletion
+        # find $CLUSTER_DATA_DIR  -name "cluster_data.yaml"  | tar -zcvf "${SHARED_DIR}/clusters_data.tar.gz" -T -
+        tar -zcvf "${SHARED_DIR}/clusters_data.tar.gz" --exclude=*.json --exclude=*terraform* --exclude=*.zip --exclude=*.tf* --exclude=tls --exclude=*.log  -C /tmp/clusters-data .
+        set -e
+        exit "$return_code"
       command:
-      - ci-operator
+      - /bin/bash
       env:
       - name: CLUSTER1_CONFIG
       - name: CLUSTER2_CONFIG
@@ -403,7 +442,7 @@ periodics:
         value: pull-secret
       - name: S3_BUCKET_NAME
       - name: S3_BUCKET_PATH
-      image: ci-operator:latest
+      image: registry.ci.openshift.org/ci/openshift-cli-installer:latest
       imagePullPolicy: Always
       name: ""
       resources:
