--- a/ci-operator/jobs/CSPI-QE/MSI/CSPI-QE-MSI-cluster-install-uninstall-periodics.yaml
+++ b/ci-operator/jobs/CSPI-QE/MSI/CSPI-QE-MSI-cluster-install-uninstall-periodics.yaml
@@ -368,6 +368,10 @@ periodics:
   cluster: build03
   cron: '@yearly'
   decorate: true
+  extra_refs:
+  - base_ref: cluster-install-uninstall
+    org: CSPI-QE
+    repo: MSI
   labels:
     ci-operator.openshift.io/cloud: aws
     ci-operator.openshift.io/cloud-cluster-profile: aws-managed-cspi-qe
