--- a/ci-operator/config/CSPI-QE/MSI/CSPI-QE-MSI-rhods-addon-interop__v4.13-GA-stage.yaml
+++ b/ci-operator/config/CSPI-QE/MSI/CSPI-QE-MSI-rhods-addon-interop__v4.13-GA-stage.yaml
@@ -7,6 +7,10 @@ base_images:
     name: ocp-addons-operators-cli
     namespace: ci
     tag: latest
+  openshift-cli-installer:
+    name: openshift-cli-installer
+    namespace: ci
+    tag: latest
   rhods-addon-tests:
     name: ods-ci
     namespace: ci
@@ -92,6 +96,7 @@ tests:
     cluster_profile: aws-managed-cspi-qe
     env:
       ADDON1_CONFIG: name=managed-odh;notification-email=interop-qe-ms@redhat.com
+      CLUSTER_KUBECONFIG_PATH: /tmp/clusters-data/aws/aws-ipi-rhods/auth/kubeconfig
       CLUSTER1_CONFIG: name=aws-ipi-rhods;base_domain=aws.interop.ccitredhat.com;platform=aws;region=us-east-2;version=4.13;stream=ci;worker_flavor=g4dn.2xlarge;timeout=1h;worker_replicas=2;fips=true
       FIREWATCH_CONFIG: |
         [
