--- a/ci-operator/step-registry/operator/install/operator-install-ref.yaml
+++ b/ci-operator/step-registry/operator/install/operator-install-ref.yaml
@@ -45,5 +45,8 @@ ref:
     - name: OPENSHIFT_VERSION
       default: ""
       documentation: Refer to INSTALL_FROM_IIB documentation
+    - name: CLUSTER_KUBECONFIG_PATH
+      default: ""
+      documentation: Pass the path to CLUSTER_KUBECONFIG_PATH if using `cluster-install` flow
   documentation: >-
     This step installs an operator in a cluster.
