WIP: Donotmerge run CI patch

--- a/ci-operator/step-registry/telco5g/origin/telco5g-origin-workflow.yaml
+++ b/ci-operator/step-registry/telco5g/origin/telco5g-origin-workflow.yaml
@@ -13,3 +13,4 @@ workflow:
   documentation: |-
     Install a cluster through an ssh for telco5g testing
     and run telco5g related origin tests on it.
+# test
