--- a/clusters/build-clusters/01_cluster/sshd-bastion/z/deployment.yaml
+++ b/clusters/build-clusters/01_cluster/sshd-bastion/z/deployment.yaml
@@ -136,6 +136,30 @@ items:
       targetPort: bastion5-2
     type: ClusterIP
     clusterIP: 172.30.92.217
+- apiVersion: v1
+  kind: Service
+  metadata:
+    namespace: bastion-z
+    name: sshd-3
+    labels:
+      app: prow
+      component: sshd
+  spec:
+    selector:
+      app: prow
+      component: sshd
+    ports:
+    - name: libvirt
+      port: 16509
+      targetPort: libvirt-3
+    - name: http
+      port: 80
+      targetPort: http-3
+    - name: https
+      port: 443
+      targetPort: https-3
+    type: ClusterIP
+    clusterIP: 172.37.47.57
 - apiVersion: apps/v1
   kind: Deployment
   metadata:
@@ -173,6 +197,8 @@ items:
               containerPort: 16510
             - name: libvirt-2
               containerPort: 16511
+            - name: libvirt-3
+              containerPort: 16512
             - name: api-0
               containerPort: 6443
             - name: api-1
@@ -185,12 +211,16 @@ items:
               containerPort: 8081
             - name: http-2
               containerPort: 8082
+            - name: http-3
+              containerPort: 8083
             - name: https-0
               containerPort: 8443
             - name: https-1
               containerPort: 8444
             - name: https-2
               containerPort: 8445
+            - name: https-3
+              containerPort: 8446
             - name: bastion0-0
               containerPort: 1033
             - name: bastion0-1
