--- a/ci-operator/config/redhat-openshift-ecosystem/community-operators-pipeline-preprod/redhat-openshift-ecosystem-community-operators-pipeline-preprod-stage__4.11.yaml
+++ b/ci-operator/config/redhat-openshift-ecosystem/community-operators-pipeline-preprod/redhat-openshift-ecosystem-community-operators-pipeline-preprod-stage__4.11.yaml
@@ -25,6 +25,10 @@ tests:
         export OCP_CLUSTER_VERSION=4.11
         ci/prow/main.sh
       from: src
+      credentials:
+      - mount_path: /var/run/cred
+        name: community-pipeline-github-automation
+        namespace: test-credentials
       resources:
         limits:
           cpu: 1000m
