--- a/ci-operator/config/openshift-qe/ocp-qe-perfscale-ci/openshift-qe-ocp-qe-perfscale-ci-main__rosa-4.14-nightly.yaml
+++ b/ci-operator/config/openshift-qe/ocp-qe-perfscale-ci/openshift-qe-ocp-qe-perfscale-ci-main__rosa-4.14-nightly.yaml
@@ -27,7 +27,7 @@ tests:
     cluster_profile: aws-perfscale
     env:
       CHANNEL_GROUP: nightly
-      COMPUTE_MACHINE_TYPE: m5.2xlarge
+      COMPUTE_MACHINE_TYPE: m5.xlarge
       ENABLE_AUTOSCALING: "false"
       MULTI_AZ: "true"
       OPENSHIFT_VERSION: "4.14"
@@ -35,7 +35,7 @@ tests:
     test:
     - chain: openshift-qe-ocp-qe-perfscale-ci-tests
     workflow: rosa-aws-sts
-  timeout: 5h0m0s
+  timeout: 6h0m0s
 zz_generated_metadata:
   branch: main
   org: openshift-qe
